<resources>
    <string name="app_name" translatable="false">MarketCentral</string>
    <string name="freeTimeSoftware" translatable="false">Free Time Software</string>
    <string name="MarketCentral" translatable="false">Market Central</string>
    <!--Login activity Non translatable-->
    <string name="facebook_app_id" translatable="false">859830897714232</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb859830897714232</string>
    <!--Login activity-->
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Dont have an account?  Create one here!</string>
    <string name="create_account">Create Account</string>
    <string name="lost_password">Lost Password?</string>
    <string name="edtUpdateEmail">Update Email?</string>
    <!--Login Activity Validations-->
    <string name="Empty_email_field">Email Field is empty</string>
    <string name="Empty_password_field">Password field is empty</string>
    <string name="Auth_success">Authentication Successful</string>
    <string name="Auth_not_success">Authentication Not Successful</string>
    <string name="googleAuthSuccess">Google Authentication Success</string>
    <string name="googleAuthNotSuccess">Google Authentication Not Successful</string>
    <string name="googleSignInNotSuccess">Google Sign In Not Successful</string>
    <string name="facebookAuthSuccess">Facebook Authentication Success</string>
    <string name="facebookAuthNotSuccess">Facebook Authentication Not Successful</string>
    <!--Create Account activity-->
    <string name="toolbar_title_createaccount">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_user">User</string>
    <string name="hint_confirn_password">Confirm Password</string>
    <string name="text_button_createaccount">Join us</string>
    <!--Create Account Activity Validations-->
    <string name="conf_password">Confirmation password do not match</string>
    <string name="email_verif_sent_to">Email verification sent to</string>
    <string name="email_verification_not_sent">Failed to send verification email</string>
    <string name="email_not_verified">Please verify your email link sent</string>
    <string name="invldEmailOrWeakPsw">Invalid or Existing Email or Weak Password</string>
    <!--Home - Drawer Header - Fragment Container activity -->
    <string name="toolbar_title_home" translatable="false">Home</string>
    <string name="access_lvl_value" translatable="false">1</string>
    <string name="access_level">Access Level:</string>
    <string name="clearance_color">Clearance Color:</string>
    <string name="user_name">User Name</string>
    <string name="userimage">User Image</string>
    <string name="user_email">User Email</string>
    <!--<string name="logout_button">Logout</string>-->
    <string name="logout">Logout</string>
    <string name="SignOut">Sign Out Successful</string>
    <!--Reset Password Activity-->
    <string name="toolbar_title_forgotpassword">Forgot Password</string>
    <string name="psw_reset_email_sent">Password Reset Email Sent</string>
    <string name="reset_password">Password Reset</string>
    <string name="InvldEmail">Invalid or Not Found Email</string>
    <!--Email Change Activity-->
    <string name="hint_current_email">Current Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="updateEmail">Update Email</string>
    <string name="toolbar_title_updatemail">Update Mail</string>
    <string name="logginRequest">Loggin with current email to continue</string>
    <string name="quickLogin">Quick Login</string>
    <string name="quickLogout">Quick Logout</string>
    <!--Drawer Menu - Fragment Container activity-->
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <!--Home drawer-->
    <string name="home">Home</string>
    <string name="welcome">Welcome to</string>
    <string name="statistics">Statistics</string>
    <string name="prices">Prices</string>
    <!--Account drawer-->
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <!--Communicate drawer-->
    <string name="communicate">Communicate</string>
    <string name="message">Message</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <!--About us drawer-->
    <string name="about">About Us</string>
    <string name="programmer">Programmer</string>
    <string name="programmer_name" translatable="false">Fernando Daniel Jaime</string>
    <string name="designer">Designer</string>
    <string name="designer_name" translatable="false">Fernando Daniel Jaime</string>
    <!--System drawer-->
    <string name="system">System</string>
</resources>


